--- a/온라인 계좌_ANN+MinMaxScaling.ipynb
+++ b/온라인 계좌_ANN+MinMaxScaling.ipynb
@@ -322,6 +322,29 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 11,
+   "id": "6e4dfeae",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-04-22T13:47:22.911272Z",
+     "start_time": "2023-04-22T13:47:22.855519Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Test loss:  0.30395838618278503\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('Test loss: ', loss)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 9,
    "id": "d2e06d75",
    "metadata": {
