--- a/온라인 계좌_ANN+RobustScaler.ipynb
+++ b/온라인 계좌_ANN+RobustScaler.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "01f0af5a",
+   "id": "263fbc4e",
    "metadata": {},
    "source": [
     "# 온라인 계좌_ANN+RobustScaler"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "6ab844c9",
+   "id": "e23a3c4d",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-04-22T12:48:54.698968Z",
@@ -32,7 +32,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "81123060",
+   "id": "ed64d126",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-04-22T12:48:55.093113Z",
@@ -74,7 +74,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "3becc58d",
+   "id": "39994c09",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-04-22T12:48:55.265443Z",
@@ -91,7 +91,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "1a89a9b0",
+   "id": "50ded11f",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-04-22T12:48:55.710099Z",
@@ -107,7 +107,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "65d20c81",
+   "id": "91253067",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-04-22T12:48:56.287556Z",
@@ -127,7 +127,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "9ffdacd1",
+   "id": "ad5b5a4f",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-04-22T12:48:57.135935Z",
@@ -149,7 +149,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "01c2335e",
+   "id": "b54e8bfd",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-04-22T13:02:12.149316Z",
@@ -283,7 +283,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "f4e21659",
+   "id": "565a06b5",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-04-22T13:02:29.578715Z",
@@ -307,8 +307,31 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 10,
+   "id": "d4aa2219",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-04-22T13:48:08.903780Z",
+     "start_time": "2023-04-22T13:48:08.889802Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Test loss:  0.3033648133277893\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('Test loss: ', loss)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 9,
-   "id": "2d093359",
+   "id": "c8701c4e",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-04-22T13:02:32.654530Z",
@@ -367,7 +390,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3e323dd5",
+   "id": "e9f91383",
    "metadata": {},
    "outputs": [],
    "source": []
