--- a/체크카드_ANN+RobustScaler.ipynb
+++ b/체크카드_ANN+RobustScaler.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "9f3d1e98",
+   "id": "8f263974",
    "metadata": {},
    "source": [
     "# 체크카드_ANN+RobustScaler"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "746b419a",
+   "id": "a577f4e8",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-04-22T12:48:48.732882Z",
@@ -32,7 +32,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "0fdfa8fe",
+   "id": "dc1cf42b",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-04-22T12:48:49.015212Z",
@@ -74,7 +74,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "cbaa421f",
+   "id": "e562bb52",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-04-22T12:48:49.123922Z",
@@ -91,7 +91,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "57f1cd1d",
+   "id": "688121b1",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-04-22T12:48:49.400420Z",
@@ -107,7 +107,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "9c2cdeae",
+   "id": "4a96efd1",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-04-22T12:48:49.770656Z",
@@ -127,7 +127,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "ab368eed",
+   "id": "8dfa10a9",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-04-22T12:48:50.345453Z",
@@ -149,7 +149,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "529d8db0",
+   "id": "73ad0fce",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-04-22T13:07:59.788082Z",
@@ -369,7 +369,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "79f88d35",
+   "id": "b1d14b1d",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-04-22T13:08:02.685334Z",
@@ -393,8 +393,31 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 10,
+   "id": "7e75042b",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-04-22T13:48:14.568420Z",
+     "start_time": "2023-04-22T13:48:14.549467Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Test loss:  0.29477450251579285\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('Test loss: ', loss)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 9,
-   "id": "8dd6f8e4",
+   "id": "2924d728",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-04-22T13:08:03.895804Z",
@@ -453,7 +476,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bdb0e956",
+   "id": "ecd03cd9",
    "metadata": {},
    "outputs": [],
    "source": []
