--- a/체크카드_ANN+StandardScaler.ipynb
+++ b/체크카드_ANN+StandardScaler.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "792df3c3",
+   "id": "f5e8ccca",
    "metadata": {},
    "source": [
     "# 체크카드_ANN+StandardScaler"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "55b7f016",
+   "id": "3a085d97",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-04-22T12:42:20.554951Z",
@@ -32,7 +32,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "bbe6fd17",
+   "id": "82f447b7",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-04-22T12:42:20.642534Z",
@@ -74,7 +74,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "53c905bd",
+   "id": "ad6a8463",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-04-22T12:42:20.699909Z",
@@ -91,7 +91,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "fb5a4fec",
+   "id": "e679a557",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-04-22T12:42:20.805627Z",
@@ -107,7 +107,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "b5cafadb",
+   "id": "71642140",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-04-22T12:42:20.932054Z",
@@ -127,7 +127,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "66d7bdc6",
+   "id": "25fa0339",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-04-22T12:42:21.099075Z",
@@ -149,7 +149,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "d31cc4eb",
+   "id": "cc0d546d",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-04-22T13:04:45.153600Z",
@@ -387,7 +387,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "352ec5be",
+   "id": "946d2561",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-04-22T13:04:49.305681Z",
@@ -411,8 +411,31 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 10,
+   "id": "cdacc2d9",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-04-22T13:47:53.672860Z",
+     "start_time": "2023-04-22T13:47:53.658922Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Test loss:  0.2960168719291687\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('Test loss: ', loss)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 9,
-   "id": "0f8479c7",
+   "id": "68233bb9",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-04-22T13:04:51.391535Z",
@@ -471,7 +494,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "838d7134",
+   "id": "6de90056",
    "metadata": {},
    "outputs": [],
    "source": []
