--- a/특별계좌_ANN+MinMaxScaling.ipynb
+++ b/특별계좌_ANN+MinMaxScaling.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "cfea9bba",
+   "id": "2235f93d",
    "metadata": {},
    "source": [
     "# 특별계좌_ANN+MinMaxScaling"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "4666a647",
+   "id": "01db039c",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-04-22T12:09:14.680974Z",
@@ -32,7 +32,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "0618568f",
+   "id": "9a946506",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-04-22T12:09:14.762397Z",
@@ -75,7 +75,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "2fcff277",
+   "id": "3cb3d306",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-04-22T12:09:14.793611Z",
@@ -92,7 +92,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "3e35158d",
+   "id": "7cb170c0",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-04-22T12:09:14.871745Z",
@@ -108,7 +108,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "45f7a75e",
+   "id": "68c83448",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-04-22T12:09:14.952752Z",
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8923819b",
+   "id": "66212044",
    "metadata": {},
    "source": [
     "MinMaxScaler\n",
@@ -139,7 +139,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "6dde907e",
+   "id": "67364560",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-04-22T12:09:15.074865Z",
@@ -161,7 +161,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "467337b1",
+   "id": "3e57b698",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-04-22T12:18:03.607837Z",
@@ -315,7 +315,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "822535be",
+   "id": "999a892d",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-04-22T12:18:07.276682Z",
@@ -339,8 +339,31 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 11,
+   "id": "2cd3997f",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-04-22T13:43:33.442715Z",
+     "start_time": "2023-04-22T13:43:33.347009Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Test loss:  0.2445385456085205\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('Test loss: ', loss)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 9,
-   "id": "ae3c2ab5",
+   "id": "33c0e48b",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-04-22T12:18:09.121337Z",
@@ -400,7 +423,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "5e33c7fc",
+   "id": "b777def7",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-04-22T12:18:09.189683Z",
