--- a/특별계좌_ANN_NoScaling.ipynb
+++ b/특별계좌_ANN_NoScaling.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "9bd135a7",
+   "id": "439e300f",
    "metadata": {},
    "source": [
     "# 특별계좌_ANN_NoScaling"
@@ -134,7 +134,8 @@
     "ExecuteTime": {
      "end_time": "2023-04-22T12:08:40.143992Z",
      "start_time": "2023-04-22T12:05:54.561007Z"
-    }
+    },
+    "scrolled": false
    },
    "outputs": [
     {
@@ -208,7 +209,30 @@
    ],
    "source": [
     "loss, accuracy = model.evaluate(X_test, y_test)\n",
-    "print('Test accuracy:', accuracy)"
+    "print('Test accuracy:', accuracy)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "34df348f",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-04-22T13:41:41.926638Z",
+     "start_time": "2023-04-22T13:41:41.896719Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Test loss:  0.3927341401576996\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('Test loss: ', loss)"
    ]
   },
   {
