--- a/온라인 계좌_ANN_NoScaling.ipynb
+++ b/온라인 계좌_ANN_NoScaling.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "c35ab7ea",
+   "id": "f800a72e",
    "metadata": {},
    "source": [
     "# 온라인 계좌_ANN_NoScaling"
@@ -206,6 +206,29 @@
    "source": [
     "loss, accuracy = model.evaluate(X_test, y_test)\n",
     "print('Test accuracy:', accuracy)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "65ad0884",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-04-22T13:41:50.305308Z",
+     "start_time": "2023-04-22T13:41:50.227504Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Test loss:  0.5052028894424438\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('Test loss: ', loss)"
    ]
   },
   {
