--- a/온라인계좌_ANN+StandardScaler.ipynb
+++ b/온라인계좌_ANN+StandardScaler.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "db58fa31",
+   "id": "61bc6ebd",
    "metadata": {},
    "source": [
     "# 온라인계좌_ANN+StandardScaler"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "e4bf1c58",
+   "id": "241cbe8e",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-04-22T12:42:18.258790Z",
@@ -32,7 +32,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "7b39bfd3",
+   "id": "08d741da",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-04-22T12:42:18.366697Z",
@@ -74,7 +74,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "a2e61b17",
+   "id": "2cb4867f",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-04-22T12:42:18.426534Z",
@@ -91,7 +91,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "9406693c",
+   "id": "16101c6c",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-04-22T12:42:18.530527Z",
@@ -107,7 +107,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "3bcf51b9",
+   "id": "46c9c87c",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-04-22T12:42:18.658795Z",
@@ -127,7 +127,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "b1e2f503",
+   "id": "14bb87ac",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-04-22T12:42:23.409826Z",
@@ -149,7 +149,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "76189ed0",
+   "id": "a16d471d",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-04-22T12:56:48.010679Z",
@@ -315,7 +315,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "5346695c",
+   "id": "41cf7dfb",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-04-22T12:56:54.080713Z",
@@ -339,8 +339,31 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 10,
+   "id": "3f9f2c89",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-04-22T13:47:48.559766Z",
+     "start_time": "2023-04-22T13:47:48.539783Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Test loss:  0.30192244052886963\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('Test loss: ', loss)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 9,
-   "id": "0a9e46ef",
+   "id": "0ebb66cb",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-04-22T12:56:58.430498Z",
@@ -399,7 +422,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "336ee5d8",
+   "id": "27ee675c",
    "metadata": {},
    "outputs": [],
    "source": []
