--- a/체크카드_ANN+MinMaxScaling.ipynb
+++ b/체크카드_ANN+MinMaxScaling.ipynb
@@ -394,6 +394,29 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 12,
+   "id": "b35c1481",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-04-22T13:47:30.948354Z",
+     "start_time": "2023-04-22T13:47:30.926442Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Test loss:  0.2957203686237335\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('Test loss: ', loss)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 9,
    "id": "558809dc",
    "metadata": {
