--- a/체크카드_ANN_NoScaling.ipynb
+++ b/체크카드_ANN_NoScaling.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "25fb1e1c",
+   "id": "7dcdd997",
    "metadata": {},
    "source": [
     "# 체크카드_ANN_NoScaling"
@@ -206,6 +206,29 @@
    "source": [
     "loss, accuracy = model.evaluate(X_test, y_test)\n",
     "print('Test accuracy:', accuracy)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "d262a787",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-04-22T13:41:55.272590Z",
+     "start_time": "2023-04-22T13:41:55.150672Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Test loss:  0.587940514087677\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('Test loss: ', loss)"
    ]
   },
   {
