--- a/특별계좌_ANN+RobustScaler.ipynb
+++ b/특별계좌_ANN+RobustScaler.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "4dd5a8eb",
+   "id": "0d77a0ac",
    "metadata": {},
    "source": [
     "# 특별계좌_ANN+RobustScaler"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "43763e13",
+   "id": "a10003a7",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-04-22T12:48:49.885115Z",
@@ -32,7 +32,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "49334d17",
+   "id": "d3649043",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-04-22T12:48:50.112135Z",
@@ -74,7 +74,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "cf180430",
+   "id": "3e336cbe",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-04-22T12:48:50.207879Z",
@@ -91,7 +91,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "6453f9d5",
+   "id": "9ef6189e",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-04-22T12:48:50.517514Z",
@@ -107,7 +107,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "0ccf1fbd",
+   "id": "ce1a1a79",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-04-22T12:48:50.852488Z",
@@ -127,7 +127,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "95ded01f",
+   "id": "e3bb7c11",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-04-22T12:48:51.183533Z",
@@ -149,7 +149,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "f6a3cabb",
+   "id": "f08b0c0d",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-04-22T13:05:15.538476Z",
@@ -323,7 +323,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "7bb0a7b4",
+   "id": "259a9d0b",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-04-22T13:05:19.355864Z",
@@ -347,8 +347,31 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 10,
+   "id": "8738e1ce",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-04-22T13:48:03.671626Z",
+     "start_time": "2023-04-22T13:48:03.651653Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Test loss:  0.24065245687961578\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('Test loss: ', loss)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 9,
-   "id": "95e07da7",
+   "id": "eec32b24",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-04-22T13:05:21.003509Z",
@@ -407,7 +430,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6e351aa0",
+   "id": "fe03753c",
    "metadata": {},
    "outputs": [],
    "source": []
