--- a/특별계좌_ANN+StandardScaler.ipynb
+++ b/특별계좌_ANN+StandardScaler.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "be2be36b",
+   "id": "37fdbf9c",
    "metadata": {},
    "source": [
     "# 특별계좌_ANN+StandardScaler"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "2f59ca8b",
+   "id": "91bde4eb",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-04-22T12:42:15.420464Z",
@@ -32,7 +32,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "fa688926",
+   "id": "abc15c88",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-04-22T12:42:15.510226Z",
@@ -74,7 +74,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "936b7d34",
+   "id": "46b2ba22",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-04-22T12:42:15.570065Z",
@@ -91,7 +91,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "6ad55cff",
+   "id": "8f1a467c",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-04-22T12:42:15.661040Z",
@@ -107,7 +107,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "b97d99f5",
+   "id": "565fa68e",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-04-22T12:42:15.780776Z",
@@ -127,7 +127,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "74ed0d29",
+   "id": "eeb4a64a",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-04-22T12:42:26.340221Z",
@@ -149,7 +149,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "57dbfc06",
+   "id": "9c9e7906",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-04-22T12:45:44.057354Z",
@@ -216,12 +216,13 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "5cebfc2a",
+   "id": "6eab8e3b",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-04-22T12:45:48.789704Z",
      "start_time": "2023-04-22T12:45:44.108218Z"
-    }
+    },
+    "scrolled": true
    },
    "outputs": [
     {
@@ -240,8 +241,31 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 10,
+   "id": "d722e4fc",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-04-22T13:47:40.962646Z",
+     "start_time": "2023-04-22T13:47:40.873006Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Test loss:  0.2474210113286972\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('Test loss: ', loss)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 9,
-   "id": "505288c9",
+   "id": "bc9a050a",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-04-22T12:45:52.032208Z",
@@ -300,7 +324,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1bd5350a",
+   "id": "6425360b",
    "metadata": {},
    "outputs": [],
    "source": []
